Added groupID code

--- a/views/interface.handlebars
+++ b/views/interface.handlebars
@@ -5,7 +5,11 @@
 <h1 style="font-size: 3em; text-align: center; margin-top: 10%">DJ Khaaled</h1>	
 
 <div style="text-align: center">
-    <h3>Current Song</h1>
+<br>
+    <h1>GroupID</h1>
+    <h1>{{groupID}}</h1>
+<br>
+    <h1>Current Song</h1>
     <h1><i>{{song}}</i></h1>
 </div>
 <br>
