--- a/views/interface.handlebars
+++ b/views/interface.handlebars
@@ -1,72 +1,3 @@
 <html>
-<head>
-	<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
-</head>
-
-<style type="text/css">
-   body {
-       margin:0; padding:0;
-       overflow: hidden;
-   }
-   html, body, #bg {
-       height:100%;
-       width:100%;
-   }
-   #bg {
-       position:absolute; 
-       left:0;
-       right:0;
-       bottom:0;
-       top:0;
-       overflow:hidden;
-       z-index:-1;
-       opacity: 1;
-
-   }
-   #bg img {
-       width:100%;
-       min-width:100%;
-       min-height:100%;
-   }
-   #content {
-       z-index:1;
-   }
-   img {
-   		-webkit-filter: blur(10px);
-    	filter: blur(10px);
-	}
-</style>
-
-<body>
-
-
-	<div id="bg">
-	   <img style="display:block;" src="dj.jpg">
-	</div>
-
-	<h1 style="font-size: 4em; text-align: center; margin-top: 10%; font-family: 'Orbitron', sans-serif; color: white;">D&nbsp;J&nbsp;&nbsp;
-	&nbsp;K&nbsp;h&nbsp;a&nbsp;a&nbsp;l&nbsp;e&nbsp;d</h1>	
-
-
-	<div style="font-size: 1.2em; text-align: center; margin-top: 5%; font-family: 'Orbitron', sans-serif; color: white;">
-		<br>
-	   
-	    <h3>Group&nbsp;ID</h3>
-	    <h1>{{groupID}}</h1>
-		<br>
-		<br>
-		<br>
-	   
-	    <h3>Current Song</h3>
-	    <h1><i>{{song}}</i></h1>
-	    <br>
-	    <br>
-	    <br>
-	    
-	    <h3>Crowd Mood</h3>
-	    <h1><i>{{mood}}</i></h1>
-
-	</div>
-
-</body>
-<html>
+<h1>Interface</h1>
+</html>
