--- a/views/interface.handlebars
+++ b/views/interface.handlebars
@@ -41,7 +41,7 @@
 
 
 	<div id="bg">
-	   <img style="display:block;" src="./dj.jpg">
+	   <img style="display:block;" src="http://woolcockndunns.com/wp-content/uploads/2015/02/DJ-Your-Event.jpg">
 	</div>
 
 	<h1 style="font-size: 4em; text-align: center; margin-top: 10%; font-family: 'Orbitron', sans-serif; color: white;">D&nbsp;J&nbsp;&nbsp;
